<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hebi_cpp_api</name>
  <version>3.9.0</version>
  
  <description>A ROS 2 package providing access to the HEBI C++ API.</description>

  <maintainer email="chris@hebirobotics.com">Chris Bollinger</maintainer>
  <maintainer email="hariharan@hebirobotics.com">Hariharan Ravichandran</maintainer>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <author email="chris@hebirobotics.com">Chris Bollinger</author>
  <author email="matt@hebirobotics.com">Matthew Tesch</author>

  <url type="website">http://docs.hebi.us/tools.html#cpp-api</url>
  <url type="website">http://hebirobotics.com</url>
  
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>eigen</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
